feat: pass message type with file
When g4 sends files, the message type that
was specified by client is also included
in the event and we need to pass it back
to caller
